--- a/src/files/index.html
+++ b/src/files/index.html
@@ -6,19 +6,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./css/app.css?v={{ version }}" />
 
-		//= modules/favicon.html
+		//= components/favicon.html
 
 		<title>Viktor Petukhov, PhD</title>
 	</head>
 
 	<body>
-		<div class="app js-app">
 
-			//= modules/home.html
-			
-		</div>
-
-		<div class="spinner js-spinner"></div>
+		//= components/bar.html
+		//= components/hero.html
+		//= components/short-bio.html
+		//= components/help.html
+		//= components/projects.html
+		//= components/steps.html
+		//= components/request.html
+		//= components/jump.html
+		//= components/spinner.html
 
 		<script src="./js/app.js?v={{ version }}"></script>
 	</body>
