Компонент hero десктоп

--- a/src/files/index.html
+++ b/src/files/index.html
@@ -12,17 +12,17 @@
 	</head>
 
 	<body>
-
-		//= components/bar.html
-		//= components/hero.html
-		//= components/short-bio.html
-		//= components/help.html
-		//= components/projects.html
-		//= components/steps.html
-		//= components/request.html
-		//= components/jump.html
-		//= components/spinner.html
-
+		<div class="app">
+			//= components/bar.html
+			//= components/hero.html
+			//= components/short-bio.html
+			//= components/help.html
+			//= components/projects.html
+			//= components/steps.html
+			//= components/request.html
+			//= components/jump.html
+			//= components/spinner.html
+		</div>
 		<script src="./js/app.js?v={{ version }}"></script>
 	</body>
 
