--- a/src/files/pages/career.html
+++ b/src/files/pages/career.html
@@ -7,6 +7,8 @@
 	<body>
 		<div class="app">
 			//= ../components/bar.html
+			//= ../components/page-header.html
+			//= ../components/page-nav.html
 		</div>
 		<script src="./js/app.js?v={{ version }}"></script>
 	</body>
