Компонент experience десктоп

--- a/src/files/pages/career.html
+++ b/src/files/pages/career.html
@@ -9,6 +9,7 @@
 			//= ../components/bar.html
 			//= ../components/page-header.html
 			//= ../components/page-nav.html
+			//= ../components/experience.html
 		</div>
 		<script src="./js/app.js?v={{ version }}"></script>
 	</body>
