--- a/src/files/pages/career.html
+++ b/src/files/pages/career.html
@@ -10,6 +10,7 @@
 			//= ../components/page-header.html
 			//= ../components/page-nav.html
 			//= ../components/experience.html
+			//= ../components/portfolio.html
 		</div>
 		<script src="./js/app.js?v={{ version }}"></script>
 	</body>
