--- a/src/files/pages/career.html
+++ b/src/files/pages/career.html
@@ -11,6 +11,8 @@
 			//= ../components/page-nav.html
 			//= ../components/experience.html
 			//= ../components/portfolio.html
+			//= ../components/publications.html
+			//= ../components/request-small.html
 		</div>
 		<script src="./js/app.js?v={{ version }}"></script>
 	</body>
